add jwt
add jwt token and authentication middleware
