# internal/app/usecases/users/endpoint.go
@@ -13,6 +13,7 @@ import (
 type Endpoint interface {
 	GetUserByID(c *fiber.Ctx) error
 	GetUser(c *fiber.Ctx) error
+	Login(c *fiber.Ctx) error
 }
 
 type endpoint struct {
@@ -26,8 +27,8 @@ func NewEndpoint(service Service) Endpoint {
 }
 
 // @Tags User
-// @Summary Show User
-// @Description Show All User
+// @Summary แสดงข้อมูล User ทั้งหมด
+// @Description แสดงข้อมูลทั้งหมดแบบไม่มีเงื่อนไข
 // @Accept  json
 // @Produce  json
 // @Success 200 {object} schema.HTTPError
@@ -35,6 +36,7 @@ func NewEndpoint(service Service) Endpoint {
 // @Failure 404 {object} schema.HTTPError
 // @Failure 500 {object} schema.HTTPError
 // @Router /api/users/users2 [get]
+// @Security ApiKeyAuth
 func (ep *endpoint) GetUserByID(c *fiber.Ctx) error {
 
 	return handlers.ResponseObjectNoRequest(c, ep.service.GetUserAll)
@@ -51,6 +53,22 @@ func (ep *endpoint) GetUserByID(c *fiber.Ctx) error {
 // @Failure 404 {object} schema.HTTPError
 // @Failure 500 {object} schema.HTTPError
 // @Router /api/users/getuser [get]
+// @Security ApiKeyAuth
 func (ep *endpoint) GetUser(c *fiber.Ctx) error {
 	return handlers.RespJson(c, ep.service.GetUser, &schema.UserRequest{})
+}
+
+// @Tags AUTH
+// @Summary Login เข้าสู่ระบบ
+// @Description login เข้าสู่ระบบเพื่อสร้าง jwt token
+// @Accept  json
+// @Produce  json
+// @Param request body schema.LoginReq false " request body "
+// @Success 200 {object} []models.User
+// @Failure 400 {object} schema.HTTPError
+// @Failure 404 {object} schema.HTTPError
+// @Failure 500 {object} schema.HTTPError
+// @Router /api/auth/login [post]
+func (ep *endpoint) Login(c *fiber.Ctx) error {
+	return handlers.RespJson(c, ep.service.GetUserByUserName, &schema.LoginReq{})
 }
